Training records & Assign SN

--- a/inventory/templates/inventory/medicine_inventory_details.html
+++ b/inventory/templates/inventory/medicine_inventory_details.html
@@ -69,7 +69,7 @@
             <tr>
                 <td>{{ data.quantity }}</td>
                 <td>{{ data.date_counted }}</td>    
-                <td>{{data.time}}</td>    
+                <td>{{data.user}}</td>    
             </tr>
             {% endfor %}
         </tbody>
@@ -89,7 +89,7 @@
             <tr>
                 <td>{{ data2.quantity }}</td>
                 <td>{{ data2.date_received }}</td>    
-                <td></td>    
+                <td>{{data.user}}</td>  
             </tr>
             {% endfor %}
         </tbody>
@@ -109,7 +109,7 @@
             <tr>
                 <td>{{ data3.quantity }}</td>
                 <td>{{ data3.date_subtracted }}</td>    
-                <td></td>    
+                <td>{{data.user}}</td>   
             </tr>
             {% endfor %}
         </tbody>
