--- a/training/templates/training/classify_k9_list.html
+++ b/training/templates/training/classify_k9_list.html
@@ -1,15 +1,110 @@
 {% extends "profiles/sidebar_training.html" %}  
 
 {% block content %}
-
+<div class="ui inverted segment" style="padding:20px;">
+    <h3 class="ui header">{{ title }}</h3>
+</div>
 <div class="ui top attached tabular menu">
-    <a class="item active" data-tab="first">Unclassified</a>
-    <a class="item" data-tab="second">Classified</a>
-    <a class="item" data-tab="third">On-Training</a>
+    <a class="item active" data-tab="first">Untrained</a>
+    <a class="item" data-tab="second">On-Training</a>
     <a class="item" data-tab="third">Trained</a>
+    <a class="item" data-tab="fourth">Unclassified</a>
+    <a class="item" data-tab="fifth">Classified</a>
+    <a class="item" data-tab="sixth">Failed</a>
 </div>
 <div class="ui tab segment active" data-tab="first">
     <table id="tabledata1" class="ui seven column celled table">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Breed</th>
+                <th>Color</th>
+                <th>Sex</th>
+                <th>Age</th>
+                <th>Source</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for data_untrained in data_untrained %}
+            <tr>
+                <td>{{data_untrained.name}}</td>
+                <td >{{data_untrained.breed}}</td>
+                <td>{{data_untrained.color}}</td>
+                <td >{{data_untrained.sex}}</td>
+                <td>{{data_untrained.age}}</td>
+                <td>{{data_untrained.source}}</td>
+                <td style="text-align:center;">
+                    <a href="{% url 'training:training_update_form' data_untrained.training_id %}" class = "tiny ui blue basic button">Select</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+<div class="ui tab segment" data-tab="second">
+<table id="tabledata2" class="ui celled table">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Breed</th>
+            <th>Color</th>
+            <th>Sex</th>
+            <th>Age</th>
+            <th>Traning Level</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for data_ontraining in data_ontraining %}
+        <tr>
+            <td>{{data_ontraining.name}}</td>
+            <td >{{data_ontraining.breed}}</td>
+            <td>{{data_ontraining.color}}</td>
+            <td >{{data_ontraining.sex}}</td>
+            <td>{{data_ontraining.age}}</td>
+            <td>{{data_ontraining.training_level}}</td>
+            <td style="width:140px;">
+                <a href="{% url 'training:training_update_form' data_ontraining.training_id %}" class = "tiny ui blue basic button">Select</a>
+                <a href="{% url 'training:fail_dog' data_ontraining.training_id %}" onclick="return confirm('Are you sure?')" class = "tiny ui red basic button">Drop</a>
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+</div>
+<div class="ui tab segment" data-tab="third">
+<table id="tabledata3" class="ui seven column celled table">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Breed</th>
+            <th>Color</th>
+            <th>Sex</th>
+            <th>Age</th>
+            <th>Training Level</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for data_trained in data_trained %}
+        <tr>
+            <td>{{data_trained.name}}</td>
+            <td >{{data_trained.breed}}</td>
+            <td>{{data_trained.color}}</td>
+            <td >{{data_trained.sex}}</td>
+            <td>{{data_trained.age}}</td>
+            <td>{{data_trained.training_level}}</td>
+            <td style="text-align:center;">
+                <a href="{% url 'training:serial_number_form' data_trained.id %}" class = "tiny ui blue basic button">Select</a>
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+</div>
+<div class="ui tab segment" data-tab="fourth">
+    <table id="tabledata4" class="ui seven column celled table">
         <thead>
             <tr>
                 <th>Name</th>
@@ -38,8 +133,8 @@
         </tbody>
     </table>
 </div>
-<div class="ui tab segment" data-tab="second">
-    <table id="tabledata2" class="ui seven column celled table">
+<div class="ui tab segment" data-tab="fifth">
+    <table id="tabledata5" class="ui seven column celled table">
         <thead>
             <tr>
                 <th>Name</th>
@@ -68,68 +163,36 @@
         </tbody>
     </table>
 </div>
-<div class="ui tab segment" data-tab="third">
-<table id="tabledata3" class="ui seven column celled table">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Breed</th>
-            <th>Color</th>
-            <th>Sex</th>
-            <th>Age</th>
-            <th>Classification</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for data_ontraining in data_ontraining %}
-        <tr>
-            <td>{{data_ontraining.name}}</td>
-            <td >{{data_ontraining.breed}}</td>
-            <td>{{data_ontraining.color}}</td>
-            <td >{{data_ontraining.sex}}</td>
-            <td>{{data_ontraining.age}}</td>
-            <td>{{data_ontraining.capability}}</td>
-            <td style="text-align:center;">
-                <a href="{% url 'training:classify_k9_select' data_ontraining.id %}" class = "tiny ui blue basic button">Select</a>
-            </td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
-</div>
-<div class="ui tab segment" data-tab="fourth">
-<table id="tabledata4" class="ui seven column celled table">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Breed</th>
-            <th>Color</th>
-            <th>Sex</th>
-            <th>Age</th>
-            <th>Classification</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for data_trained in data_trained %}
-        <tr>
-            <td>{{data_trained.name}}</td>
-            <td >{{data_trained.breed}}</td>
-            <td>{{data_trained.color}}</td>
-            <td >{{data_trained.sex}}</td>
-            <td>{{data_trained.age}}</td>
-            <td>{{data_trained.capability}}</td>
-            <td style="text-align:center;">
-                <a href="{% url 'training:classify_k9_select' data_trained.id %}" class = "tiny ui blue basic button">Select</a>
-            </td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
-</div>
-
-
+<div class="ui tab segment" data-tab="sixth">
+        <table id="tabledata6" class="ui seven column celled table">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Breed</th>
+                    <th>Color</th>
+                    <th>Sex</th>
+                    <th>Age</th>
+                    <th>Training Level</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for data_failed in data_failed %}
+                <tr>
+                    <td>{{data_failed.name}}</td>
+                    <td >{{data_failed.breed}}</td>
+                    <td>{{data_failed.color}}</td>
+                    <td >{{data_failed.sex}}</td>
+                    <td>{{data_failed.age}}</td>
+                    <td>{{data_failed.training_level}}</td>
+                    <td style="text-align:center;">
+                        <a href="{% url 'training:training_details' data_failed.id %}" class = "tiny ui blue basic button">Select</a>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 <script type="text/javascript">
         
     $(document).ready(function() {
@@ -137,6 +200,8 @@
         $('#tabledata2').DataTable();
         $('#tabledata3').DataTable();
         $('#tabledata4').DataTable();
+        $('#tabledata5').DataTable();
+        $('#tabledata6').DataTable();
         $('.menu .item').tab();
     });
     
