--- a/inventory/templates/inventory/food_inventory_details.html
+++ b/inventory/templates/inventory/food_inventory_details.html
@@ -60,7 +60,7 @@
             <tr>
                 <td>{{ data.quantity }}</td>
                 <td>{{ data.date_counted }}</td>    
-                <td></td>    
+                <td>{{data.user}}</td>   
             </tr>
             {% endfor %}
         </tbody>
@@ -80,7 +80,7 @@
             <tr>
                 <td>{{ data2.quantity }}</td>
                 <td>{{ data2.date_received }}</td>    
-                <td></td>    
+                <td>{{data.user}}</td>   
             </tr>
             {% endfor %}
         </tbody>
@@ -100,7 +100,7 @@
             <tr>
                 <td>{{ data3.quantity }}</td>
                 <td>{{ data3.date_subtracted }}</td>    
-                <td></td>    
+                <td>{{data.user}}</td>     
             </tr>
             {% endfor %}
         </tbody>
