--- a/training/templates/training/serial_number_form.html
+++ b/training/templates/training/serial_number_form.html
@@ -23,18 +23,13 @@
                                 {{form.serial_number}}
                         </div>
                         <div class="field">
-                                <label>Serial Number:</label>
+                                <label>Microchip:</label>
                                 {{form.microchip}}
                         </div>
                         <div class="field">
-                                <label>Grade</label>
-                                {{form.grade}}
+                                <label>Purpose:</label>
+                                {{form.dog_type}}
                         </div>
-                        <div class="field">
-                                <label>Remarks</label>
-                                {{form.remarks}}
-                        </div>
-
                         <div class="ui inverted right aligned segment" style="padding: 0px;">
                             <button onclick="return confirm('Are you sure?')" class = "ui button green" type="submit" >{{ actiontype }}</button>
                         </div>
