--- a/profiles/templates/profiles/sidebar_um.html
+++ b/profiles/templates/profiles/sidebar_um.html
@@ -31,7 +31,7 @@
                                     <a href="{% url 'unitmanagement:request_form'%}" class="item">Request Equipment
                                         <i class="exclamation icon"></i>
                                     </a>
-                                    <a href="{% url 'unitmanagement:request_list'%}" class="item">Request List
+                                    <a href="{% url 'unitmanagement:request_list'%}" class="item">Request Equipment List
                                         <i class="clipboard list icon"></i>
                                     </a>
                                 </div>
