--- a/training/templates/training/training_update_form.html
+++ b/training/templates/training/training_update_form.html
@@ -74,9 +74,29 @@
             </tr>
         </thead>
     </table>
-    <div class="ui basic center aligned segment">
-            <button onclick="return confirm('Are you sure?')" id = "btn" class = "ui button green" type="submit" >Submit</button>
+    <div class="fields">
+        <div class="six wide field">
+            <div class="ui labeled input">
+                <div class="ui teal label" style="width:80px;">
+                    Grade
+                </div>
+                {{form.grade}}
+            </div>
         </div>
+        <div class="field"></div>
+        <div class="field"></div>
+    </div>
+    <div class="field">
+        <div class="ui labeled input">
+            <div class="ui teal label">
+                Remarks
+            </div>
+            {{form.remarks}}
+        </div>
+    </div>
+    <div class="ui basic center aligned segment">
+        <button onclick="return confirm('Are you sure?')" id = "btn" class = "ui button green" type="submit" >Submit</button>
+    </div>
 </form>
 
 
@@ -113,10 +133,15 @@
             $("input[name='stage3_3']").prop('disabled', true)
             $("#btn").prop('disabled', true)
         }
-       
+        
+        $("input[name='grade']").prop('disabled', true)
+        $("textarea[name='remarks']").prop('disabled', true)
+
         //Stage3_3
         $("input[name='stage3_3']").change(function() {
             if ($("input[name='stage3_2']").is(':checked')){
+                $("input[name='grade']").prop('disabled', false)
+                $("textarea[name='remarks']").prop('disabled', false)
             }else{
                 alert('Previous stage must be checked')
                 $("input[name='stage3_3']").prop('checked', false)
