Retested forecasting on trending data with diff pattern

--- a/deployment/templates/deployment/area_list.html
+++ b/deployment/templates/deployment/area_list.html
@@ -10,23 +10,15 @@
 		<table id="tabledata" class="ui celled table">
         	<thead>
           	<tr>
-              <th>FOU</th>
               <th>TEAM</th>
-              <th>Number of Handlers</th>
-              <th>EDD</th>
-              <th>NDD</th>
-              <th>SAR</th>
           	</tr>
     		</thead>
     		<tbody>
 				{% for assignment in team_assignment %}
     				<tr>
-    					<td>{{assignment.area}}</a></td>
-                        <td>{{assignment.team }}</td>
-    					<td>{{assignment.handlers }}</td>
-    					<td>{{assignment.EDD }}</td>
-                        <td>{{assignment.NDD }}</td>
-                        <td>{{assignment.SAR }}</td>
+
+						<td><a href="{% url 'deployment:area_detail' assignment.id %}">{{assignment.team }}</td>
+
     				</tr>
 				{% endfor %}
         </tbody>
