--- a/training/templates/training/classify_k9_select.html
+++ b/training/templates/training/classify_k9_select.html
@@ -5,13 +5,17 @@
     <h3 class="ui header">Classify {{ title }}</h3>
     {% if messages %}
         {% for message in messages %}
-            <div class="ui green message" > {{ message }}</div>
+            <div class={{style}} > {{ message }}</div>
         {% endfor %}
     {% endif %}
 </div>
 <div class="ui segment">
     <table class="ui two column celled table">
         <thead>
+        <tr>
+                <th>Name</th>
+                <td>{{data.name}}</td>
+            </tr>
             <tr>
                 <th>Age</th>
                 <td>{{data.age}}</td>
@@ -101,11 +105,9 @@
         <div class="field"></div>
         <div class="field"></div>
         <div class="field">
-            <select name="select_classify" id="select_classify">
-                <option value="SAR">SAR</option>
-                <option value="NDD">NDD</option>
-                <option value="EDD">EDD</option>
-            </select>
+            {% for radio in form.skill %}
+            {{ radio }}
+            {% endfor %}
         </div>
         <div class="field">
             <button class="ui green button">Submit</button>
