Breeding form ui + Skill Classifier WIP

--- a/planningandacquiring/templates/planningandacquiring/add_K9_parents.html
+++ b/planningandacquiring/templates/planningandacquiring/add_K9_parents.html
@@ -47,7 +47,7 @@
 </div>
 
     <div class="ui tab segment active" data-tab="first">
-    <table id="tabledata1" class="ui five column pink celled table">
+    <table id="tabledata1" class="ui five column inverted pink celled table">
         <thead>
             <tr>
                 <th></th>
@@ -75,7 +75,7 @@
     </div>
 
     <div class="ui tab segment " data-tab="second">
-    <table id="tabledata2" class="ui five column blue celled table">
+    <table id="tabledata2" class="ui five column inverted blue celled table">
         <thead>
             <tr>
                 <th></th>
