--- a/training/templates/training/classify_k9_list.html
+++ b/training/templates/training/classify_k9_list.html
@@ -9,9 +9,7 @@
     <a class="item" data-tab="second">Classified</a>
     <a class="item" data-tab="third">On-Training</a>
     <a class="item" data-tab="fourth">Trained</a>
-    <a class="item" data-tab="fifth">For Breeding</a>
-    <a class="item" data-tab="sixth">For Adoption</a>
-    <a class="item" data-tab="seventh">For Deployment</a>
+    <a class="item" data-tab="fifth">For Adoption</a>
 </div>
 <div class="ui tab segment active" data-tab="first">
     <table id="tabledata1" class="ui seven column celled table">
@@ -143,36 +141,6 @@
                     <th>Color</th>
                     <th>Sex</th>
                     <th>Age</th>
-                    <th>Source</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for data_breeeding in data_breeeding %}
-                <tr>
-                    <td>{{data_breeeding.name}}</td>
-                    <td >{{data_breeeding.breed}}</td>
-                    <td>{{data_breeeding.color}}</td>
-                    <td >{{data_breeeding.sex}}</td>
-                    <td>{{data_breeeding.age}}</td>
-                    <td>{{data_breeeding.source}}</td>
-                    <td style="text-align:center;">
-                        <a href="{% url 'training:training_details' data_breeeding.id %}" class = "tiny ui blue basic button">Select</a>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-<div class="ui tab segment" data-tab="sixth">
-        <table id="tabledata6" class="ui seven column celled table">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Breed</th>
-                    <th>Color</th>
-                    <th>Sex</th>
-                    <th>Age</th>
                     <th>Training Level</th>
                     <th></th>
                 </tr>
@@ -187,37 +155,7 @@
                     <td>{{data_adoption.age}}</td>
                     <td>{{data_adoption.training_level}}</td>
                     <td style="text-align:center;">
-                        <a href="{% url 'training:training_details' data_adoption.id %}" class = "tiny ui blue basic button">Select</a>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-<div class="ui tab segment" data-tab="seventh">
-        <table id="tabledata7" class="ui seven column celled table">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Breed</th>
-                    <th>Color</th>
-                    <th>Sex</th>
-                    <th>Age</th>
-                    <th>Training Level</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for data_deployment in data_deployment %}
-                <tr>
-                    <td>{{data_deployment.name}}</td>
-                    <td >{{data_deployment.breed}}</td>
-                    <td>{{data_deployment.color}}</td>
-                    <td >{{data_deployment.sex}}</td>
-                    <td>{{data_deployment.age}}</td>
-                    <td>{{data_deployment.training_level}}</td>
-                    <td style="text-align:center;">
-                        <a href="{% url 'training:training_details' data_deployment.id %}" class = "tiny ui blue basic button">Select</a>
+                        <a href="{% url 'training:adoption_form' data_adoption.id %}" class = "tiny ui blue basic button">Select</a>
                     </td>
                 </tr>
                 {% endfor %}
@@ -232,8 +170,6 @@
         $('#tabledata3').DataTable();
         $('#tabledata4').DataTable();
         $('#tabledata5').DataTable();
-        $('#tabledata6').DataTable();
-        $('#tabledata7').DataTable();
         $('.menu .item').tab();
     });
     
